[project]
name = "mambaglue"
description = "MambaGlue: Fast and Robust Local Feature Matching With Mamba"
version = "0.1"
authors = [
    {name = "Kihwan Ryoo"},
    {name = "Hyungtae Lim"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
urls = {Repository = "https://github.com/Kihwan-Ryoo/MambaGlue/"}
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = ["black==23.12.1", "flake8", "isort"]

[tool.setuptools]
packages = ["mambaglue"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.isort]
profile = "black"
